--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>hello</title>
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="/static/js/bootstrap.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        {% for value in query['businesses'] %}
-        <p>Biz: <a href={{ value.url}}>{{ value.name }}</a></p>
-        {% endfor %}
+        <input type="button" class="btn btn-primary" onclick="location.href='{{ query }}';" value="HANGRY?!"/>
     </body>
 </html>
